--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,18 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+#excuse {
+  color: white;
+  font-size: xx-large;
+}
+.excusebox {
+  text-align: center;
+}
